Update dependencies, make the project buildable.